src/tokenize/snapshots/wenyan_rs__tokenize__scanner__test__「「一·三五.snap
---
source: src/tokenize/scanner.rs
expression: tokens
---
- value:
    Error: unterminated string.
  span:
    start: 0
    end: 17
  line: 1
- value: Eof
  span:
    start: 17
    end: 17
  line: 1

