src/tokenize/snapshots/wenyan_rs__tokenize__scanner__test__「甲.snap
---
source: src/tokenize/scanner.rs
expression: tokens
---
- value:
    Error: unterminated identifier.
  span:
    start: 0
    end: 6
  line: 1
- value: Eof
  span:
    start: 6
    end: 6
  line: 1

