src/tokenize/snapshots/wenyan_rs__tokenize__scanner__test__一百三十五.snap
---
source: src/tokenize/scanner.rs
expression: tokens
---
- value: Number
  span:
    start: 0
    end: 15
  line: 1
- value: Eof
  span:
    start: 15
    end: 15
  line: 1

