src/tokenize/snapshots/wenyan_rs__tokenize__scanner__test__吾有一数.snap
---
source: src/tokenize/scanner.rs
expression: tokens
---
- value: Decl
  span:
    start: 0
    end: 6
  line: 1
- value: Number
  span:
    start: 6
    end: 9
  line: 1
- value:
    Error: Unexpected character.
  span:
    start: 9
    end: 12
  line: 1
- value: Eof
  span:
    start: 12
    end: 12
  line: 1

